--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,23 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.maps:google-maps-services:0.18.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'org.slf4j:slf4j-nop:2.0.0-alpha1'
     apply plugin: 'kotlin-android'
     apply plugin: 'kotlin-android-extensions'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.maps:google-maps-services:0.18.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'org.slf4j:slf4j-nop:2.0.0-alpha1'
+    implementation 'com.github.jd-alexander:library:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
 }
+apply plugin: 'com.google.gms.google-services'
